umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_github7306.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 32
sum_formula: C24N4
graph6: "[iCGGC@?G?_@?@??_?G?@??E??G_?G??_?@@???G?G????@?C?A?O???_??G???@"
