umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_github8_extra.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 39
bond_count: 42
sum_formula: C20H13IN2O3
graph6: f????CA?aAGC?O?G?A??O?@??O?O?_?CE?@?@?AG?@????_???BK?G???O???A????C????G????G????A?????G????@?????C?@?????A?????@?????C??????
