umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_glysergly.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 27
sum_formula: C7H13N3O5
graph6: "[iCGGG@?GA?@?@?@??K??C??O??O??A???_??G???_??@????O???O???C???@??"
