umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_issue123.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 39
bond_count: 41
sum_formula: C18H16FNO2S
graph6: "fhca?G@?G?_`?_??_?G?@?_C??c????_???@???O??AA???A????O???C????O???@????A????A?????_????G?????_????C?????O?????A?????A?????@???"
