umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_largemol.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 476
bond_count: 531
sum_formula: C219N80O133P22S22
graph6: "~?F[sOh?_B?_AG??@?@??O?B??O??_??_??C??@???O??A???_????????_???G???A????G????W????_????C????G?????G?????_????@?????@?????G_???C???????_?????@????E?????????G??????G??????????????G??????@???????A???????C???????A????????g???????@???????G?????????G????????O????????G????????B?????????O????????C?????????C?????O???@??????????_?????????O?????????_?????????????????????G??????????O??????????O??????????C???????????g??????????C???????????G???????????B???????????A????????????_??????????G?????????????C????????????O????????????O????????????K????????????C?????????????_????????????A??????????A??@?????????????@?????????????@?????????????A?????????????????????????????C??????????????O??????????????O??????????????O??????????????C???????????????g???????????????_?????????????A????????????????@???????????????@????????????????O???????????????B????????????????G???????????????@?????????????????_?????????????@??C????????????????@?????????????????O????????????????O???????????????????????????????????@?????????????????@??????????????????O?????????????????B??????????????????C?????????????????A??????????????????@??????????????????G???????????????????@???????????????????O??????????????????@???????????????????C???????????????????E???????????????????A????????????????????_???????????????????B????????????????????O?????????????????GA??????????????????????G????????????????????G??????????????????G?????????????????????????????????????????????_????????????????????A?????????????????????C?????????????????????A??????????????????????g?????????????????????G??????????????????????_??????????????????????W??????????????????????_??????????????????????O?????????????????????G????????????????????????G??????????????????????@???????????????????????A???????????????????????B???????????????????????A????????????????????????_???????????????????????C?????????????????????G??C????????????????????????G????????????????????????O???????????????????????@???????????????????????????????????????????????????G?????????????????????????_????????????????????????A?????????????????????????A?????????????????????????@_?????????????????????????_?????????????????????????@??????????????????????????_??????????????????????????G??????????????????????????G??????????????????????????C??????????????????????????@??????????????????????????AG?????????????????????????O????????????????????????????_???????????????????????????O?????????????????????????W??????????????????????????????G???????????????????????????A?????????????????????????????????????????????????????????G????????????????????????????O????????????????????????????G????????????????????????????C?????????????????????????????_????????????????????????????A_????????????????????????????@????????????????????????????A???????????????????????????????_?????????????????????????????O?????????????????????????????A??????????????????????????????K??????????????????????????????O?????????????????????????????@???????????????????????????????O??????????????????????????O???@???????????????????????????????G??????????????????????????????@???????????????????????????????_????????????????????????????????????????????????????????????????_???????????????????????????????O???????????????????????????????A????????????????????????????????K????????????????????????????????G???????????????????????????????A?????????????????????????????????_???????????????????????????????A??????????????????????????????????G????????????????????????????????@?????????????????????????????????A?????????????????????????????????C?????????????????????????????????B??????????????????????????????????_?????????????????????????????????C??????????????????????????????????K??????????????????????????????????_???????????????????????????????GA????????????????????????????????????C??????????????????????????????????A????????????????????????????????@?????????????????????????????????????????????????????????????????????????@???????????????????????????????????A???????????????????????????????????@????????????????????????????????????W???????????????????????????????????@???????????????????????????????????@????????????????????????????????????@????????????????????????????????????O?????????????????????????????????????C????????????????????????????????????A?????????????????????????????????????O????????????????????????????????????A?????????????????????????????????????E?????????????????????????????????????C?????????????????????????????????????A??????????????????????????????????????W?????????????????????????????????????C???????????????????????????????????C@????????????????????????????????????????G??????????????????????????????????????O????????????????????????????????????_????????????????????????????????????????????????????????????????????????????????G??????????????????????????????????????@???????????????????????????????????????C???????????????????????????????????????C???????????????????????????????????????A_??????????????????????????????????????@????????????????????????????????????????G????????????????????????????????????????K????????????????????????????????????????_????????????????????????????????????????_???????????????????????????????????????_?????????????????????????????????????????@?????????????????????????????????????????O????????????????????????????????????????@?????????????????????????????????????????B?????????????????????????????????????????C?????????????????????????????????????????A??????????????????????????????????????????_?????????????????????????????????????????@??????????????????????????????????????????C??????????????????????????????????????????O??????????????????????????????????????????_?????????????????????????????????????????A???????????????????????????????????????????????????????????????????????????????????????G???????????????????????????????????????????_??????????????????????????????????????????A???????????????????????????????????????????A???????????????????????????????????????????@_???????????????????????????????????????????_???????????????????????????????????????????@????????????????????????????????????????????_????????????????????????????????????????????G????????????????????????????????????????????G????????????????????????????????????????????C????????????????????????????????????????????@????????????????????????????????????????????AG???????????????????????????????????????????O??????????????????????????????????????????????_?????????????????????????????????????????????O???????????????????????????????????????????W????????????????????????????????????????????????G?????????????????????????????????????????????A?????????????????????????????????????????????????????????????????????????????????????????????G??????????????????????????????????????????????O??????????????????????????????????????????????G??????????????????????????????????????????????C???????????????????????????????????????????????_??????????????????????????????????????????????A_??????????????????????????????????????????????@??????????????????????????????????????????????A?????????????????????????????????????????????????_???????????????????????????????????????????????O???????????????????????????????????????????????A????????????????????????????????????????????????K????????????????????????????????????????????????O???????????????????????????????????????????????@?????????????????????????????????????????????????O????????????????????????????????????????????O???@?????????????????????????????????????????????????G????????????????????????????????????????????????@?????????????????????????????????????????????????_????????????????????????????????????????????????????????????????????????????????????????????????????_?????????????????????????????????????????????????O?????????????????????????????????????????????????C??????????????????????????????????????????????????O??????????????????????????????????????????????????g?????????????????????????????????????????????????@???????????????????????????????????????????????????_??????????????????????????????????????????????????B???????????????????????????????????????????????????_??????????????????????????????????????????????????A??????????????????????????????????????????????????G????????????????????????????????????????????????????@???????????????????????????????????????????????????@????????????????????????????????????????????????????O???????????????????????????????????????????????????B????????????????????????????????????????????????????O????????????????????????????????????????????????????_????????????????????????????????????????????????????_?????????????????????????????????????????????????G??C????????????????????????????????????????????????????@?????????????????????????????????????????????????????O????????????????????????????????????????????????????G???????????????????????????????????????????????????????????????????????????????????????????????????????????@?????????????????????????????????????????????????????@??????????????????????????????????????????????????????O?????????????????????????????????????????????????????C??????????????????????????????????????????????????????O??????????????????????????????????????????????????????g??????????????????????????????????????????????????????G?????????????????????????????????????????????????????G???????????????????????????????????????????????????????@???????????????????????????????????????????????????????O??????????????????????????????????????????????????????@???????????????????????????????????????????????????????B???????????????????????????????????????????????????????A???????????????????????????????????????????????????????C????????????????????????????????????????????????????????_?????????????????????????????????????????????????????O?@????????????????????????????????????????????????????????C????????????????????????????????????????????????????????O???????????????????????????????????????????????????????C??????????????????????????????????????????????????????????????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????O????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????B?????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????A???????????????????????????????????????????????????????????C??????????????????????????????????????????????????????????O??????????????????????????????????????????????????????????O??????????????????????????????????????????????????????????O??????????????????????????????????????????????????????????E???????????????????????????????????????????????????????????_??????????????????????????????????????????????????????????A???????????????????????????????????????????????????????????B???????????????????????????????????????????????????????????C?????????????????????????????????????????????????????????_G?????????????????????????????????????????????????????????????G???????????????????????????????????????????????????????????A??????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????C?????????????????????????????????????????????????????????????_????????????????????????????????????????????????????????????A_????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????@_?????????????????????????????????????????????????????????????_?????????????????????????????????????????????????????????????C?????????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????O??????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????B???????????????????????????????????????????????????????????????_??????????????????????????????????????????????????????????????A???????????????????????????????????????????????????????????????C????????????????????????????????????????????????????????????A??@????????????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????????O???????????????????????????????????????????????????????????????O?????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????A?????????????????????????????????????????????????????????????????W????????????????????????????????????????????????????????????????A?????????????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????_?????????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????????@??????????????????????????????????????????????????????????????????C?????????????????????????????????????????????????????????????????AG????????????????????????????????????????????????????????????????C???????????????????????????????????????????????????????????????????A???????????????????????????????????????????????????????????????????O????????????????????????????????????????????????????????????????E??????????????????????????????????????????????????????????????????????_??????????????????????????????????????????????????????????????????A????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????_???????????????????????????????????????????????????????????????????O???????????????????????????????????????????????????????????????????A????????????????????????????????????????????????????????????????????O????????????????????????????????????????????????????????????????????_????????????????????????????????????????????????????????????????????g????????????????????????????????????????????????????????????????????C???????????????????????????????????????????????????????????????????A??????????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????????????????A?????????????????????????????????????????????????????????????????????B?????????????????????????????????????????????????????????????????????@?????????????????????????????????????????????????????????????????????@??????????????????????????????????????????????????????????????????????C?????????????????????????????????????????????????????????????????@????C??????????????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????????O?????????????????????????????????????????????????????????????????????A???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????????@???????????????????????????????????????????????????????????????????????A???????????????????????????????????????????????????????????????????????B????????????????????????????????????????????????????????????????????????_??????????????????????????????????????????????????????????????????????A????????????????????????????????????????????????????????????????????????G???????????????????????????????????????????????????????????????????????G?????????????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????????????O????????????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????????????C?????????????????????????????????????????????????????????????????????????o????????????????????????????????????????????????????????????????????????A?????????????????????????????????????????????????????????????????????????C?????????????????????????????????????????????????????????????????????????B?????????????????????????????????????????????????????????????????????????A???????????????????????????????????????????????????????????????????????GA???????????????????????????????????????????????????????????????????????????@??????????????????????????????????????????????????????????????????????????G???????????????????????????????????????????????????????????????????????@????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????C??????????????????????????????????????????????????????????????????????????A???????????????????????????????????????????????????????????????????????????O??????????????????????????????????????????????????????????????????????????@_??????????????????????????????????????????????????????????????????????????@???????????????????????????????????????????????????????????????????????????O???????????????????????????????????????????????????????????????????????????C???????????????????????????????????????????????????????????????????????????O????????????????????????????????????????????????????????????????????????????@????????????????????????????????????????????????????????????????????????????G????????????????????????????????????????????????????????????????????????????O????????????????????????????????????????????????????????????????????????????_????????????????????????????????????????????????????????????????????????????W????????????????????????????????????????????????????????????????????????????C?????????????????????????????????????????????????????????????????????????????_????????????????????????????????????????????????????????????????????????????@_????????????????????????????????????????????????????????????????????????????C??????????????????????????????????????????????????????????????????????????@?O???????????????????????????????????????????????????????????????????????????????_?????????????????????????????????????????????????????????????????????????????O???????????????????????????????????????????????????????????????????????????G?????????????????????????????????????????????_?????????????????????????????????????????????????????????????????????????????????????????????????????????????????G???O??????????????????????????????????????????????????????????????????????????G??????????????????????????????????????????????????????????????????????????????G"
